--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 <h1>Rafe Orheim</h1>
-<img src="./4.1+Webpages/4.1 Webpages/assets/images/Rafe Orheim.png" height="200">
 <h2>Summary</h2>
 <h3>I'm a creative individual with experience in playing and teaching guitar.</h3>
 <hr />
@@ -56,10 +55,10 @@
 <h2>Other</h2>
 <ul>
     <li>
-        <a href="./4.1+Webpages/4.3 HTML Porfolio Project/public/about.html">About Me</a>
+        <a href="./about.html">About Me</a>
     </li>
     <li>
-        <a href="./4.1+Webpages/4.3 HTML Porfolio Project/public/contact.html">Contact Me</a>
+        <a href="./contact.html">Contact Me</a>
     </li>
 </ul>
 <footer>
